--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "babel-loader": "^8.0.6",
     "core-js": "^3.6.4",
     "cssnano": "^4.1.10",
-    "http-server": "^0.12.1",
+    "http-server": "^0.12.3",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.0",
     "regenerator-runtime": "^0.13.3",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "terser-webpack-plugin": "^3.0.1",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^4.2.0"
   }
 }
